[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10.8"
crc32fast = "1.4.2"
fmt = "0.1.0"
hex = { version = "0.4.3", features = ["serde"] }
ic-ledger-types = "0.11.0"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1.0"
serde_bytes = "0.11.14"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
strum_macros = "0.26.2"

[lib]
path = "src/lib/mod.rs"
